Created 1 block: block of herbs

--- a/src/main/resources/assets/plants_and_scapes/lang/en_us.json
+++ b/src/main/resources/assets/plants_and_scapes/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "item.plants_and_scapes.light_medicine" : "Light medicine",
-  "item.plants_and_scapes.medium_medicine" : "Medium medicine"
+  "item.plants_and_scapes.medium_medicine" : "Medium medicine",
+
+  "block.plants_and_scapes.herb_block" : "Herbs"
 }
